@startuml
skinparam packageStyle rectangle
skinparam backgroundColor #F8F9FA
skinparam componentStyle uml2

package "Models" {
    class Employee {
        -id: int
        -name: str
        -position: str
        -access_cabinets: list[str]
        -face_encoding: bytes
        -photo_path: str
        +full_name: str
        +can_access(cabinet): bool
    }
    
    class Key {
        -cabinet: str
        -status: KeyStatus
        -holder_id: int
        -holder_name: str
        +is_available(): bool
    }
    
    enum KeyStatus {
        AVAILABLE
        ISSUED
    }
}

package "Database" {
    class Database {
        -db_path: str
        -_conn: Connection
        +add_employee()
        +get_employee()
        +get_employee_by_face()
        +get_all_employees()
        +update_employee()
        +delete_employee()
        +get_key()
        +get_all_keys()
        +add_key()
        +update_key()
        +close()
    }
}

package "Services" {
    class DataStore {
        -_db: Database
        +db: Database
        +get_employee()
        +get_all_keys()
        +get_key()
        +issue_key()
        +return_key()
    }
    
    class CameraService {
        -_cap: VideoCapture
        -_current_index: int
        +get_available_cameras(): list[str]
        +init_camera()
        +switch_camera()
        +read_frame()
        +is_connected(): bool
        +release()
    }
    
    class FaceService {
        -_store: DataStore
        -_threshold: float
        -_photos_dir: str
        -_current_employee: Employee
        -_face_mesh: FaceMesh
        +encode_face()
        +recognize()
        +add_employee()
        +set_employee()
        +clear_employee()
        +current_employee: Employee
    }
    
    class KeyService {
        -_store: DataStore
        +get_all_keys(): list[Key]
        +issue_key()
        +return_key()
        +return_all_keys_for_employee()
    }
}

package "UI" {
    class MainWindow {
        -_root: Tk
        -_db: Database
        -_store: DataStore
        -_camera_service: CameraService
        -_key_service: KeyService
        -_face_service: FaceService
        +_setup_ui()
        +_init_camera()
        +_update_video()
        +_recognize_face()
        +_issue_key()
        +_return_key()
        +_add_employee()
        +_on_closing()
    }
    
    class VideoPanel
    class EmployeeCard
    class KeysTable
    class EventLog
    class AddEmployeeDialog
}

Database --> Employee : creates
Database --> Key : creates
DataStore --> Database : uses
DataStore --> Employee
DataStore --> Key
FaceService --> DataStore : uses
FaceService --> Employee
KeyService --> DataStore : uses
KeyService --> Employee
KeyService --> Key
MainWindow --> Database : creates
MainWindow --> DataStore : creates
MainWindow --> CameraService : creates
MainWindow --> KeyService : creates
MainWindow --> FaceService : creates
MainWindow --> VideoPanel
MainWindow --> EmployeeCard
MainWindow --> KeysTable
MainWindow --> EventLog
MainWindow --> AddEmployeeDialog

Key "*" -- "1" KeyStatus : has
Employee "1" -- "*" Key : may have

@enduml